--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -45,6 +45,7 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
